# msg-gateway

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.json  config.json  config.test.json
.github/: pull_request_template.md
.github/workflows/: ai-code-review.yml  ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-cel-interpreter-build.txt  task-1-compile-clean.txt  task-1-forbidden-error-test.txt  task-1-root-agents-structure.txt  task-2-converter-tests.txt  task-2-src-agents.txt  task-2-stub-removed.txt  task-3-rule-defaults-test.txt  task-3-tests-agents.txt  task-3-unit-tests.txt  task-4-all-integration.txt  task-4-clippy.txt  task-4-xdg-env-override.txt  task-4-xdg-fallback.txt  task-5-e2e-scenarios.txt  task-5-rule-ordering.txt  task-6-ci-simulation.txt  task-6-engine-evaluate.txt  task-8-guardrail-block.txt
.sisyphus/evidence/final-qa/: f3-manual-qa.txt  qa-report.md
.sisyphus/notepads/cel-guardrails/: learnings.md
.sisyphus/notepads/issue-33/: learnings.md
.sisyphus/notepads/named-backends/: learnings.md
.sisyphus/notepads/opencode-backend/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: cel-guardrails.md
.sisyphus/run-continuation/: ses_33a3025b0ffenU6kV33djzNCgs.json
adapters/telegram/: adapter.json  main.py  package-lock.json  package.json  tsconfig.json
adapters/telegram/src/: main.ts
backends/opencode/: adapter.json  package-lock.json  package.json
backends/opencode/src/: main.ts
crates/gw-cli/: Cargo.toml
crates/gw-cli/src/: client.rs  main.rs
crates/plit/: Cargo.toml
crates/plit/src/: gw_main.rs  main.rs  output.rs
docs/: architecture.md  roadmap.md  workflow.md
docs/adapters/: protocol.md
docs/api/: files.md
docs/dev-plans/: discord-adapter.md  email-adapter.md  gateway-design.md  gateway-devplan.md  gw-cli.md  plit.md  slack-adapter.md
docs/testing/: e2e.md
e2e/: cucumber.js  package-lock.json  package.json
e2e/features/: admin.feature  files.feature  gateway.feature  generic.feature  opencode.feature  telegram.feature
e2e/features/step_definitions/: world.ts  (+6 more)
e2e/support/: mock-backend.ts  mock-file-server.ts  mock-opencode-server.ts  mock-telegram-server.ts  test-gateway.ts
file-cache/: f_b1096d9e9c9d.md
guardrails/: 01-block-sensitive-keywords.json  02-max-message-length.json  03-audit-attachments.json
src/: AGENTS.md  adapter.rs  admin.rs  backend.rs  config.rs  error.rs  files.rs  generic.rs  guardrail.rs  health.rs  lib.rs  main.rs  manager.rs  message.rs  server.rs  watcher.rs
tests/: AGENTS.md  integration_test.rs  mock_pipelit.py  ws_test.rs
(+21 files in other folders)
