[package]
name = "msg-gateway"
version = "0.1.0"
edition = "2024"

[lib]
name = "msg_gateway"
path = "src/lib.rs"

[[bin]]
name = "msg-gateway"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Config file watching
notify = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Utilities
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
async-trait = "0.1"

[dev-dependencies]
http = "1"
serial_test = "3.4.0"
tempfile = "3.26.0"
