[workspace]
members = ["crates/plit"]

[package]
name = "plit-gw"
version = "0.3.1"
edition = "2024"
description = "Multi-protocol message gateway for AI agents — bridges Telegram, Discord, Slack, Email to Pipelit and other backends"
license = "Apache-2.0"
repository = "https://github.com/theuselessai/msg-gateway"
keywords = ["gateway", "messaging", "ai", "agent", "pipelit"]
categories = ["network-programming", "web-programming"]

[lib]
name = "plit_gw"
path = "src/lib.rs"

[[bin]]
name = "plit-gw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Config file watching
notify = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Utilities
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
async-trait = "0.1"
cel-interpreter = "0.8"

[dev-dependencies]
http = "1"
serial_test = "3.4.0"
tempfile = "3.26.0"
